scripts/nullness/annotator/url8d3c4d17f5_catseye_JaC64_tgz-pJ8-JaC64J8.txt
../annotator/url8d3c4d17f5_catseye_JaC64_tgz-pJ8-JaC64J8/src/com/dreamfabric/jac64/ExtChip.java:12: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url8d3c4d17f5_catseye_JaC64_tgz-pJ8-JaC64J8/src/com/dreamfabric/c64utils/Debugger.java:10: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url8d3c4d17f5_catseye_JaC64_tgz-pJ8-JaC64J8/src/com/dreamfabric/jac64/ExtChip.java:44: error: cannot find symbol
  @Initializer public void init(MOS6510Core cpu) {
   ^
  symbol:   class Initializer
  location: class ExtChip
../annotator/url8d3c4d17f5_catseye_JaC64_tgz-pJ8-JaC64J8/src/com/dreamfabric/c64utils/Debugger.java:30: error: cannot find symbol
  @Initializer public void init(MOS6510Core cpu) {
   ^
  symbol:   class Initializer
  location: class Debugger
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 errors
